--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -528,6 +528,11 @@ a:hover {
   padding-top: 20px;
 }
 
+.logo-container img {
+  height: 50px; 
+  border-radius: 50%;
+}
+
 #first {
   position: relative;
   display: flex;
@@ -569,6 +574,16 @@ a:hover {
 #header.header-scrolled {
   background: rgba(0, 0, 0, 0.9);
   padding: 12px 0;
+}
+
+@media screen and (max-width: 320px) {
+  .logo #middle {
+   top: 20px;
+   left: 13px;
+  }
+ #header{
+    padding: 3px 0 0 0;
+  }
 }
 
 /*--------------------------------------------------------------
