--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -527,6 +527,10 @@ a:hover {
 .logo-container {
   padding-top: 20px;
 }
+.logo-container img {
+  height: 50px; 
+  border-radius: 50%;
+}
 
 #first {
   position: relative;
@@ -569,6 +573,12 @@ a:hover {
 #header.header-scrolled {
   background: rgba(0, 0, 0, 0.9);
   padding: 12px 0;
+}
+
+@media screen and (max-width: 320px) {  
+ #header{
+    padding: 3px 0 0 0;
+  }
 }
 
 /*--------------------------------------------------------------
